--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "babel-plugin-inline-dotenv": "^1.6.0",
     "expo": "~40.0.0",
     "expo-app-loading": "^1.0.1",
+    "expo-av": "~8.7.0",
     "expo-font": "~8.4.0",
     "expo-status-bar": "~1.0.3",
     "firebase": "^8.2.9",
