--- a/package.json
+++ b/package.json
@@ -21,20 +21,20 @@
     "@types/styled-components": "^5.1.7",
     "@types/styled-components-react-native": "^5.1.1",
     "babel-plugin-inline-dotenv": "^1.6.0",
-    "expo": "~40.0.0",
+    "expo": "^41.0.0",
     "expo-app-loading": "^1.0.1",
-    "expo-av": "~8.7.0",
-    "expo-font": "~8.4.0",
-    "expo-status-bar": "~1.0.3",
-    "firebase": "^8.2.9",
-    "lottie-react-native": "~2.6.1",
+    "expo-av": "~9.1.2",
+    "expo-font": "~9.1.0",
+    "expo-status-bar": "~1.0.4",
+    "firebase": "8.2.3",
+    "lottie-react-native": "3.5.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
-    "react-native-gesture-handler": "~1.8.0",
-    "react-native-reanimated": "~1.13.0",
-    "react-native-safe-area-context": "3.1.9",
-    "react-native-screens": "~2.15.2",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
+    "react-native-gesture-handler": "~1.10.2",
+    "react-native-reanimated": "~2.1.0",
+    "react-native-safe-area-context": "3.2.0",
+    "react-native-screens": "~3.0.0",
     "react-native-web": "~0.13.12",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
