--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "expo": "^41.0.0",
     "expo-app-loading": "^1.0.1",
     "expo-av": "~9.1.2",
+    "expo-camera": "~11.0.2",
     "expo-font": "~9.1.0",
+    "expo-image-picker": "~10.1.4",
     "expo-status-bar": "~1.0.4",
     "firebase": "8.2.3",
     "lottie-react-native": "3.5.0",
